alignment issues

--- a/style.css
+++ b/style.css
@@ -288,8 +288,7 @@ h6{
   font-size:15px;
   color: #A9A9A9;
   font-weight: bold;
-  text-align: left;
-  padding-left:5px;
+  text-align: center;
 }
 .projectimage img{
   padding-top:20px;
